--- a/environment.yml
+++ b/environment.yml
@@ -1,143 +1,117 @@
 name: IF702-redes-neurais
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2018.10.15=ha4d7672_0
-  - certifi=2018.10.15=py36_1000
-  - freetype=2.8.1=vc14_0
-  - grpcio=1.16.0=py36hbb4b082_1000
-  - hdf5=1.10.2=vc14_0
-  - icu=58.2=vc14_0
-  - imbalanced-learn=0.4.3=py_0
-  - jpeg=9b=vc14_2
-  - libgpuarray=0.7.6=vc14_0
-  - libpng=1.6.34=vc14_0
-  - libprotobuf=3.5.2=vc14_0
-  - libsodium=1.0.16=vc14_0
-  - markupsafe=1.1.0=py36hfa6e2cd_1000
-  - matplotlib=2.2.2=py36_1
-  - mistune=0.8.4=py36hfa6e2cd_1000
-  - openssl=1.0.2p=hfa6e2cd_1001
-  - protobuf=3.5.2=py36_vc14_0
-  - python=3.6.6=he025d50_0
-  - qt=5.6.2=vc14_1
-  - sqlite=3.22.0=vc14_0
-  - tensorboard=1.9.0=py36_0
-  - tensorflow=1.9.0=py36_0
-  - vc=14=0
-  - yaml=0.1.7=vc14_0
-  - zeromq=4.2.5=vc14_2
-  - zlib=1.2.11=vc14_0
-  - _tflow_select=2.2.0=eigen
-  - absl-py=0.6.1=py36_0
-  - astor=0.7.1=py36_0
-  - backcall=0.1.0=py36_0
-  - blas=1.0=mkl
-  - bleach=3.0.2=py36_0
-  - colorama=0.4.0=py36_0
-  - cycler=0.10.0=py36h009560c_0
-  - decorator=4.3.0=py36_0
-  - entrypoints=0.2.3=py36_2
-  - gast=0.2.0=py36_0
-  - h5py=2.8.0=py36h3bdd7fb_2
-  - icc_rt=2017.0.4=h97af966_0
-  - intel-openmp=2019.0=118
-  - ipykernel=5.1.0=py36h39e3cac_0
-  - ipython=7.1.1=py36h39e3cac_0
-  - ipython_genutils=0.2.0=py36h3c5d0ee_0
-  - ipywidgets=7.4.2=py36_0
-  - jedi=0.13.1=py36_0
-  - jinja2=2.10=py36_0
-  - jsonschema=2.6.0=py36h7636477_0
-  - jupyter=1.0.0=py36_7
-  - jupyter_client=5.2.3=py36_0
-  - jupyter_console=6.0.0=py36_0
-  - jupyter_core=4.4.0=py36_0
-  - keras=2.2.4=0
-  - keras-applications=1.0.6=py36_0
-  - keras-base=2.2.4=py36_0
-  - keras-preprocessing=1.0.5=py36_0
-  - kiwisolver=1.0.1=py36h6538335_0
-  - libpython=2.1=py36_0
-  - m2w64-binutils=2.25.1=5
-  - m2w64-bzip2=1.0.6=6
-  - m2w64-crt-git=5.0.0.4636.2595836=2
-  - m2w64-gcc=5.3.0=6
-  - m2w64-gcc-ada=5.3.0=6
-  - m2w64-gcc-fortran=5.3.0=6
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gcc-objc=5.3.0=6
-  - m2w64-gmp=6.1.0=2
-  - m2w64-headers-git=5.0.0.4636.c0ad18a=2
-  - m2w64-isl=0.16.1=2
-  - m2w64-libiconv=1.14=6
-  - m2w64-libmangle-git=5.0.0.4509.2e5a9a2=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - m2w64-make=4.1.2351.a80a8b8=2
-  - m2w64-mpc=1.0.3=3
-  - m2w64-mpfr=3.1.4=4
-  - m2w64-pkg-config=0.29.1=2
-  - m2w64-toolchain=5.3.0=7
-  - m2w64-tools-git=5.0.0.4592.90b8472=2
-  - m2w64-windows-default-manifest=6.4=3
-  - m2w64-winpthreads-git=5.0.0.4634.697f757=2
-  - m2w64-zlib=1.2.8=10
-  - mako=1.0.7=py36_0
-  - markdown=3.0.1=py36_0
-  - mkl=2019.0=118
-  - mkl-service=1.1.2=py36hb217b18_5
-  - mkl_fft=1.0.6=py36hdbbee80_0
-  - mkl_random=1.0.1=py36h77b88f5_1
-  - msys2-conda-epoch=20160418=1
-  - nb_conda=2.2.1=py36_0
-  - nb_conda_kernels=2.2.0=py36_0
-  - nbconvert=5.3.1=py36_0
-  - nbformat=4.4.0=py36h3a5bc1b_0
-  - notebook=5.7.1=py36_0
-  - numpy=1.15.4=py36ha559c80_0
-  - numpy-base=1.15.4=py36h8128ebf_0
-  - pandas=0.23.4=py36h830ac7b_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py36_1
-  - parso=0.3.1=py36_0
-  - pickleshare=0.7.5=py36_0
-  - pip=18.1=py36_0
-  - prometheus_client=0.4.2=py36_0
-  - prompt_toolkit=2.0.7=py36_0
-  - pygments=2.2.0=py36hb010967_0
-  - pygpu=0.7.6=py36h452e1ab_0
-  - pyparsing=2.3.0=py36_0
-  - pyqt=5.6.0=py36_2
-  - python-dateutil=2.7.5=py36_0
-  - pytz=2018.7=py36_0
-  - pywinpty=0.5.4=py36_0
-  - pyyaml=3.13=py36hfa6e2cd_0
-  - pyzmq=17.1.2=py36hfa6e2cd_0
-  - qtconsole=4.4.2=py36_0
-  - scikit-learn=0.20.0=py36heebcf9a_1
-  - scipy=1.1.0=py36h4f6bf74_1
-  - send2trash=1.5.0=py36_0
-  - setuptools=40.6.2=py36_0
-  - sip=4.19.8=py36h6538335_0
-  - six=1.11.0=py36_1
-  - tensorflow-base=1.9.0=eigen_py36h45df0d8_0
-  - termcolor=1.1.0=py36_1
-  - terminado=0.8.1=py36_1
-  - testpath=0.4.2=py36_0
-  - theano=1.0.3=py36_0
-  - tornado=5.1.1=py36hfa6e2cd_0
-  - traitlets=4.3.2=py36h096827d_0
-  - vs2015_runtime=14.15.26706=h3a45250_0
-  - wcwidth=0.1.7=py36h3d5aa90_0
-  - webencodings=0.5.1=py36_1
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.32.2=py36_0
-  - widgetsnbextension=3.4.2=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
-  - winpty=0.4.3=4
+  - ca-certificates=2018.10.15
+  - certifi=2018.10.15
+  - freetype=2.8.1
+  - grpcio=1.16.0
+  - hdf5=1.10.2
+  - icu=58.2
+  - imbalanced-learn=0.4.3
+  - jpeg=9b
+  - libgpuarray=0.7.6
+  - libpng=1.6.34
+  - libprotobuf=3.5.2
+  - libsodium=1.0.16
+  - markupsafe=1.1.0
+  - matplotlib=2.2.2
+  - mistune=0.8.4
+  - openssl=1.0.2p
+  - protobuf=3.5.2
+  - python=3.6.6
+  - qt=5.6.2
+  - sqlite=3.22.0
+  - tensorboard=1.9.0
+  - tensorflow=1.9.0
+  - vc=14
+  - yaml=0.1.7
+  - zeromq=4.2.5
+  - zlib=1.2.11
+  - _tflow_select=2.2.0
+  - absl-py=0.6.1
+  - astor=0.7.1
+  - backcall=0.1.0
+  - blas=1.0
+  - bleach=3.0.2
+  - colorama=0.4.0
+  - cycler=0.10.0
+  - decorator=4.3.0
+  - entrypoints=0.2.3
+  - gast=0.2.0
+  - h5py=2.8.0
+  - icc_rt=2017.0.4
+  - intel-openmp=2019.0
+  - ipykernel=5.1.0
+  - ipython=7.1.1
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.4.2
+  - jedi=0.13.1
+  - jinja2=2.10
+  - jsonschema=2.6.0
+  - jupyter=1.0.0
+  - jupyter_client=5.2.3
+  - jupyter_console=6.0.0
+  - jupyter_core=4.4.0
+  - keras=2.2.4
+  - keras-applications=1.0.6
+  - keras-base=2.2.4
+  - keras-preprocessing=1.0.5
+  - kiwisolver=1.0.1
+  - libpython=2.1
+  - mako=1.0.7
+  - markdown=3.0.1
+  - mkl=2019.0
+  - mkl-service=1.1.2
+  - mkl_fft=1.0.6
+  - mkl_random=1.0.1
+  - msys2-conda-epoch=20160418
+  - nb_conda=2.2.1
+  - nb_conda_kernels=2.2.0
+  - nbconvert=5.3.1
+  - nbformat=4.4.0
+  - notebook=5.7.1
+  - numpy=1.15.4
+  - numpy-base=1.15.4
+  - pandas=0.23.4
+  - pandoc=2.2.3.2
+  - pandocfilters=1.4.2
+  - parso=0.3.1
+  - pickleshare=0.7.5
+  - pip=18.1
+  - prometheus_client=0.4.2
+  - prompt_toolkit=2.0.7
+  - pygments=2.2.0
+  - pygpu=0.7.6
+  - pyparsing=2.3.0
+  - pyqt=5.6.0
+  - python-dateutil=2.7.5
+  - pytz=2018.7
+  - pywinpty=0.5.4
+  - pyyaml=3.13
+  - pyzmq=17.1.2
+  - qtconsole=4.4.2
+  - scikit-learn=0.20.0
+  - scipy=1.1.0
+  - send2trash=1.5.0
+  - setuptools=40.6.2
+  - sip=4.19.8
+  - six=1.11.0
+  - tensorflow-base=1.9.0
+  - termcolor=1.1.0
+  - terminado=0.8.1
+  - testpath=0.4.2
+  - theano=1.0.3
+  - tornado=5.1.1
+  - traitlets=4.3.2
+  - vs2015_runtime=14.15.26706
+  - wcwidth=0.1.7
+  - webencodings=0.5.1
+  - werkzeug=0.14.1
+  - wheel=0.32.2
+  - widgetsnbextension=3.4.2
+  - wincertstore=0.2
+  - winpty=0.4.3
   - pip:
     - astetik==1.9.5
     - chances==0.1.1
